--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="app-body">
       <div class="search-box">
-        <input type="text" name="" id="" placeholder="Search" />
+        <input type="text" class="search-bar" placeholder="Search" />
         <button><i class="fas fa-search"></i></button>
       </div>
 
@@ -32,6 +32,6 @@
       </div>
     </div>
 
-    <!-- <script src="app.js"></script> -->
+    <script src="app.js"></script>
   </body>
 </html>
