--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
       crossorigin="anonymous"
     />
+    <link
+      rel="shortcut icon"
+      href="https://i.pinimg.com/originals/77/0b/80/770b805d5c99c7931366c2e84e88f251.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div class="app-body">
