--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
       </div>
 
       <div class="desc">
-        <h2 class="city">Weather in Sambalpur</h2>
-        <h2 id="temp" class="temp">24°c</h2>
+        <h2 class="city"></h2>
+        <h2 id="temp" class="temp"></h2>
          <div class="more-info">
             <img src="https://openweathermap.org/img/wn/04n.png" alt="" class="icon" />
-            <div class="description">Cloudy</div>
+            <div class="description"></div>
          </div>
-        <h3 class="humidity">Humidity: 60%</h3>
-        <h3 class="wind">Wind: 5km/h</h3>
+        <h3 class="humidity"></h3>
+        <h3 class="wind"></h3>
       </div>
     </div>
 
