--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wether App</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -17,7 +17,7 @@
       href="https://i.pinimg.com/originals/77/0b/80/770b805d5c99c7931366c2e84e88f251.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="clock.css">
+    <link rel="stylesheet" href="css/clock.css">
   </head>
 
   
@@ -51,7 +51,7 @@
 
     </div>
 
-    <script src="app.js"></script>
-    <script src="clock.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/clock.js"></script>
   </body>
 </html>
